--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "43d55a71",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mit\\AppData\\Local\\Temp\\ipykernel_2376\\1564200356.py:7: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "C:\\Users\\mit\\AppData\\Local\\Temp\\ipykernel_13984\\1483254453.py:10: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  driver = webdriver.Chrome(ChromeDriverManager().install())\n"
      ]
     }
@@ -33,18 +33,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "ab41f798",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "검색을 하시겠습니까?(y/n)n\n",
+      "['1. Politics', '2. Opinions', '3. War in Ukraine', '4. Climate', '5. Well+Being', '6. Tech', '7. Lifestyle', '8. World', '9. ', '10. ']\n",
+      "원하는 주제의 번호를 입력하세요6\n",
+      "더 자세한 주제 원한다면 y를 입력하세요.(y/n)y\n",
+      "['1. Help Desk', '2. Future of Transportation', '3. Innovations', '4. Internet Culture', '5. Space', '6. Tech Policy', '7. Video Gaming']\n",
+      "원하는 주제의 번호를 입력하세요7\n"
+     ]
+    }
+   ],
    "source": [
-    "elem = driver.find_element(By.TAG_NAME, \"body\")\n",
     "a= 0\n",
+    "b = input('검색을 하시겠습니까?(y/n)')\n",
+    "count = 1\n",
+    "\n",
+    "if b == 'y' :\n",
+    "    try :\n",
+    "        while(1) :\n",
+    "            text = input('무엇을 검색하시겠습니까.(영어입력)')\n",
+    "            if text.encode().isalpha():\n",
+    "                break\n",
+    "        driver.find_element(By.CSS_SELECTOR,'#__next > div > div.PJLV.wpds-c-khdSlv.wpds-c-fqeRep > nav > div.wpds-c-kKPYWe.wpds-c-kKPYWe-cIACJd-variant-leftSide > div.PJLV.wpds-c-cMsOSt.chromatic-ignore > button').click()\n",
+    "        c = driver.find_element(By.CSS_SELECTOR,'#query')\n",
+    "        c.send_keys(text)\n",
+    "        c.send_keys(Keys.RETURN)\n",
+    "        elem = driver.find_element(By.TAG_NAME, \"body\")\n",
+    "        button = driver.find_element(By.CSS_SELECTOR,'#main-content > div.jsx-2309075444.search-app-container.mr-auto.ml-auto.flex.flex-column.col-8-lg > section.jsx-2865089505.search-results-wrapper > button')\n",
+    "    except :\n",
+    "        pass\n",
+    "else :\n",
+    "    tags=driver.find_elements(By.CSS_SELECTOR,'#__next > div > div.PJLV.wpds-c-khdSlv.wpds-c-fqeRep > nav > ul > li > a > p')\n",
+    "    button = driver.find_elements(By.CSS_SELECTOR,'#__next > div:nth-child(4) > div > main > article > div > div.center.w-100 > div > button')\n",
+    "    tag =[]\n",
+    "    for t in tags :\n",
+    "        tag.append(\"{}. \".format(count)+t.text)\n",
+    "        count += 1\n",
+    "    print(tag)\n",
+    "    big = int(input('원하는 주제의 번호를 입력하세요'))\n",
+    "    tags[big-1].click()\n",
+    "    small = input('더 자세한 주제 원한다면 y를 입력하세요.(y/n)')\n",
+    "    if small == 'y' :\n",
+    "        elem = driver.find_element(By.TAG_NAME, \"body\")\n",
+    "        stags = driver.find_elements(By.CSS_SELECTOR,'#__next > header > div > div > nav > div > div > a')\n",
+    "        stag = []\n",
+    "        count = 1\n",
+    "        for s in stags :\n",
+    "            stag.append(\"{}. \".format(count)+s.text)\n",
+    "            count += 1\n",
+    "        print(stag)\n",
+    "        bigg = int(input('원하는 주제의 번호를 입력하세요'))\n",
+    "        stags[bigg-1].click()\n",
+    "    else :\n",
+    "        pass\n",
+    "elem = driver.find_element(By.TAG_NAME, \"body\")\n",
     "for i in range(5):\n",
     "    elem.send_keys(Keys.PAGE_DOWN)\n",
     "    time.sleep(0.1)\n",
     "    try :\n",
-    "        driver.find_element(By.CSS_SELECTOR,'#__next > div:nth-child(4) > div > main > article > div > div.center.w-100 > div > button').click()\n",
+    "        button.click()\n",
     "        for i in range(30):\n",
     "            elem.send_keys(Keys.PAGE_DOWN)\n",
     "            time.sleep(0.1)\n",
@@ -54,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "bc7f4b56",
    "metadata": {
     "scrolled": false
@@ -104,7 +158,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -118,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
